<resources>
    <string name="app_name">NearFuel</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="gas">Gas</string>
    <string name="gas_stations">Gas stations</string>
    <string name="map">Map</string>
    <string name="edit_station">Edit station</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="signed_out">Signed out</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="blank_fields">All fields must be filled in.</string>
    <string name="iw_updated_at">Updated at: %1$s</string>
    <string name="iw_gas">Gas: %1$s</string>
    <string name="iw_petrol">Petrol: %1$s</string>
    <string name="iw_diesel">Diesel: %1$s</string>
    <string name="empty_error">Empty</string>
    <string name="bad_price_error">Bad price</string>
    <string name="email_verification_error">You have not verified your email.</string>
</resources>
